--- a/force-app/main/default/lwc/vehicleList/vehicleList.html
+++ b/force-app/main/default/lwc/vehicleList/vehicleList.html
@@ -3,7 +3,7 @@
         <h1 slot="title">Vehicles</h1>
 
 		<ul class = "slds-m-around-medium">
-           <template for:each={vehicle.data} for:item="vehicle">
+           <template for:each={vehicles.data} for:item="vehicle">
               <a key={vehicle.id}>{vehicle.Name}</a>
 		   </template>
 			</ul>
