--- a/force-app/main/default/lwc/accountList/accountList.html
+++ b/force-app/main/default/lwc/accountList/accountList.html
@@ -1,29 +1,18 @@
 <template>
     <lightning-card title="Accounts" icon-name="standard:account" alternative-text="Account">
       <div class="slds-card__body slds-card__body_inner">
-            <!-- Start account list -->
-        <lightning-layout multiple-rows="true" pull-to-boundary="small">
             <template for:each={accounts} for:item="account">
               <lightning-layout-item key={account.Id} size="3" class="slds-var-p-around_x-small">
-                <lightning-card title={account.Name} class="account-tile">
-                    <div class="slds-var-p-horizontal_small account-tile-body">
-                    <div class="slds-media__body" >
-                        <p class="slds-var-m-bottom_xx-small">Industry: {account.Industry}</p>
-                        <p class="slds-var-m-bottom_xx-small">ShippingAddress: {account.ShippingAddress}</p>
-                        <p class="slds-var-m-bottom_xx-small">Type: {account.Type}</p>
-                        <p class="slds-var-m-bottom_xx-small">Site: {account.Site}</p>
-                    </div>
-                 </div>        
-                </lightning-card> 
-            </lightning-layout-item>
-        </template>
-</lightning-layout>
-            </div>
-
-                 <!-- <c-account-tile account={account} onaccountview={handleAccountView}></c-account-tile>  -->
-   
-
-            <!-- End account list -->
+                <lightning-button
+                class = "button slds-small-size"
+                data-id ={account.id}
+                variant ="brand"
+                label ={account.Name}
+                onclick={showShowrooms}>
+                </lightning-button>
+              </lightning-layout-item>
+            </template>
+     </div>
     </lightning-card>
 </template> 
 
