--- a/force-app/main/default/lwc/accountList/accountList.html
+++ b/force-app/main/default/lwc/accountList/accountList.html
@@ -1,20 +1,44 @@
 <template>
-    <lightning-card title="Accounts" icon-name="standard:account" alternative-text="Account">
-      <div class="slds-card__body slds-card__body_inner">
-            <template for:each={accounts} for:item="account">
-              <lightning-layout-item key={account.Id} size="3" class="slds-var-p-around_x-small">
-                <lightning-button
-                class = "button slds-small-size"
-                data-id ={account.id}
-                variant ="brand"
-                label ={account.Name}
-                onclick={showShowrooms}>
-                </lightning-button>
-              </lightning-layout-item>
-            </template>
-     </div>
-    </lightning-card>
-</template> 
+  <lightning-card title = "Accounts List">
+      <label class="slds-form-element__label" for="select-01">Select Account
+      </label>
+      <div class="slds-form-element__control">
+          <div class="slds-select_container">
+              <select class="slds-select" id="select-01" onchange={onValueSelection}>
+                  <option value=" "></option>
+                  <template for:each={accounts.data} for:item="acc">
+                      <option key={acc.Id} value={acc.Id}>
+                          {acc.Name}
+                      </option>
+                  </template>
+              </select>
+          </div>
+      </div>
+      <lightning-card title="Showrooms">
+          <label class="slds-form-element__label" for="select-02">Select Showroom</label>
+          <div class="slds-form-element__control">
+              <div class="slds-select_container">
+                  <select class="slds-select" id="select-02" onchange={onValueSelection2}>
+                      <option value=" "> </option>
+                      <template for:each={showrooms.data} for:item="show">
+                          <option key={show.Id} value={show.Id}>
+                              {show.Name}
+                          </option>
+                      </template>
+                  </select>
+              </div>
+          </div>
+      </lightning-card>
+  </lightning-card>
+  <lightning-layout>
+      <template for:each={vehicles.data} for:item="vehicle">
+          <lightning-layout-item padding="around-small" key={vehicle.Id} size="4">
+              <c-vehicle-list vehicle={vehicle}></c-vehicle-list>
+          </lightning-layout-item>
+      </template>
+  </lightning-layout>
+</template>
+
 
 
 
