--- a/force-app/main/default/lwc/vehicleList/vehicleList.html
+++ b/force-app/main/default/lwc/vehicleList/vehicleList.html
@@ -1,9 +1,5 @@
 <template>
     <lightning-card  title="Vehicle List">
-        <lightning-badge label={vehicle.interest_status} class={vehicle.statusbadge}></lightning-badge>
-        <image>vehicle.photo</image>
-        <p class="slds-var-p-horizontal_small"><b>Vehicle Serial Number: {vehicle.name}</b></p>
-        <p class="slds-var-p-horizontal_small">{vehicle.model}</p>
-        <p class="slds-var-p-horizontal_small">{vehicle.price}</p>
+        <p class="slds-var-p-horizontal_small"><b>Vehicle Serial Number: {vehicle}</b></p>
     </lightning-card>
 </template>
