--- a/force-app/main/default/lwc/accountList/accountList.html
+++ b/force-app/main/default/lwc/accountList/accountList.html
@@ -31,12 +31,14 @@
       </lightning-card>
   </lightning-card>
   <lightning-layout>
-      <template for:each={vehicles} for:item="vehicle">
-          <lightning-layout-item padding="around-small" key={vehicle.Id} size="4">
-              <c-vehicle-list event={onVehicleSelection}></c-vehicle-list>
-          </lightning-layout-item>
-      </template>
-  </lightning-layout>
+    <template if:true={vehicles}>
+    <template for:each={vehicles.data} for:item="vehicle">
+        <lightning-layout-item padding="around-small" key={vehicle.Id} size="4">
+            <c-vehicle-list vehicle={vehicle}></c-vehicle-list>
+        </lightning-layout-item>    
+    </template>
+</template>
+</lightning-layout>
 </template>
 
 
